samples/_failures_safe/1761222840_62a0f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5d4ff75.c: In function ‘main’:
./samples/SAFE/__tmp_d5d4ff75.c:162:30: error: expected ‘)’ at end of input
  162 |     size_t len = strlen(input
      |                        ~     ^
      |                              )
./samples/SAFE/__tmp_d5d4ff75.c:162:5: error: expected declaration or statement at end of input
  162 |     size_t len = strlen(input
      |     ^~~~~~
